fixed broken css on hero section

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -138,3 +138,9 @@ em {
   transform: scale(1.1);
   opacity: 0.7;
 }
+
+@media (min-width: 1350px) {
+  #home > div > div.col-xxl-6.container.p-0 > div {
+    justify-content: flex-end !important;
+  }
+}
